Fix search input overlapping CTA (#329)
Fix search overlapping CTA

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -298,3 +298,18 @@ h1, h2, h3, h4, h5, h6 {
 .dropdown__menu li:last-child {
   display: block;
 }
+
+@media (max-width: 996px) {
+  .searchBox_qEbK,
+  div[class*="searchBox"] {
+    position: relative;
+    margin-left: auto;
+  }
+}
+
+
+@media (max-width: 500px) {
+  .navbar__items--right {
+    display: none;
+  }
+}
